--- a/css/material_edit.css
+++ b/css/material_edit.css
@@ -250,13 +250,14 @@ th, td {
 th {
   font-size: 11px;
   font-weight: 500;
-  color: rgba(0,0,0,.56);
+  color: rgba(0,0,0,.54);
   letter-spacing: .02em;
   text-transform: uppercase;
 }
 td {
   font-size: 12px;
   color: rgba(0,0,0,.87);
+  /*color: rgba(0,0,0,.54);*/
   letter-spacing: .01em;
 }
 td strong {
@@ -270,9 +271,6 @@ table .mini-icon-btn {
 
 
 /* basic table */
-.data-table {
-  /*table-layout: fixed;*/
-}
 .data-table tr:not(:last-of-type),
 .data-table.fixed-header thead tr,
 .data-table.fixed-header tbody tr:not(:last-of-type) {
