--- a/css/material_list_layout.css
+++ b/css/material_list_layout.css
@@ -38,6 +38,7 @@ table.ui-list {
   color: rgba(255,255,255,.7);
   height: 32px;
   vertical-align: top;
+  letter-spacing: .04em;
 }
 .ui-list-header:not(.two-line) th {
   padding-top: 4px;
@@ -52,22 +53,42 @@ table.ui-list {
   background-color: #fff;
 }
 .ui-list-content tr {
-  height: 40px
+  height: 36px
 }
-.ui-list-content .ui-row-echo td {
+.ui-row-echo:hover td label[onclick] {
+  border-bottom: 1px solid currentColor;
+}
+.ui-row-echo td label[onclick]:hover {
+  color: rgb(3,169,244);
+}
+
+.ui-list-content .ui-row-echo td > label {
+/*  position: relative;
+  top: 1px;*/
+  /*display: inline-block;*/
+  /*font-size: 13px;*/
+  /*vertical-align: unset;*/
+  /*padding: 0;*/
+}
 
 
-}
 .ui-list-content .ui-row-echo .mdl-button--icon {
-  color: rgba(0,0,0,.26);
-
+  color: rgba(0,0,0,.4);
+  margin: 0 2px;
 }
+
+
+.ui-list-content .ui-row-echo .mdl-checkbox__box-outline {
+  border-color: rgba(0,0,0,.4);
+}
+
 .ui-list-content .ui-row-echo:not(:first-of-type) {
   border-top: 1px solid #CFD8DC;
   border-bottom: 1px solid #CFD8DC;
 }
 .ui-list-content .ui-row-echo:hover {
-  background-color: #ECEFF1;
+  /*background-color: #ECEFF1;*/
+  background-color: rgba(3,155,229,.1);
 }
 /* row form */
 .ui-list .ui-row-form > td {
