--- a/css/material_edit.css
+++ b/css/material_edit.css
@@ -113,6 +113,13 @@ select:enabled, button:enabled, [onclick] { /*dopyt, zistiť, kto môže mať ho
 .ui-header-app-row, .ui-header-page-row {
   padding-left: 64px;
 }
+@media screen and (max-width: 1024px) {
+  .ui-header-page-row {
+    padding-left: 16px;
+  }
+}
+
+
 /* page title with dropdown */
 .mdl-layout-title.dropdown {
   cursor: pointer;
@@ -425,21 +432,31 @@ table .mini-icon-btn {
 
 
 .period-nav-btn {
-  position: absolute;
-  z-index: 10;
-  top: 50%;
-  margin-top: -28px;
-  height: 56px;
-  width: 56px;
-  min-width: 56px;
-  padding: 8px;
+  height: 40px;
+  width: 40px;
+  min-width: 40px;
+  padding: 0px;
   border-radius: 50%;
+  color: rgba(255,255,255,.7);
+  background-color: #039BE5;
 }
-.period-nav-btn:first-of-type {
-  left: 0;
+.period-nav-btn:hover {
+  background-color: #039BE5;
+  color: rgba(255,255,255,1);
 }
-.period-nav-btn:last-of-type {
-  right: 0;
+@media screen and (min-width: 1401px) {
+  .period-nav-btn {
+    position: absolute;
+    z-index: 10;
+    top: 50%;
+    margin-top: -20px;
+  }
+  .period-nav-btn:nth-of-type(1) {
+    left: 16px;
+  }
+  .period-nav-btn:nth-of-type(2) {
+    right: 16px;
+  }
 }
 
 
