--- a/css/material_list_layout.css
+++ b/css/material_list_layout.css
@@ -1,6 +1,6 @@
 /* LAYOUT */
 .ui-container {
-  max-width: 1200px;
+  max-width: 1280px;
 }
 /* first and last col */
 .ui-list th:first-of-type, .ui-list td:first-of-type {
@@ -11,10 +11,10 @@
 }
 @media screen and (max-width: 1024px) {
   .ui-list th:first-of-type, .ui-list td:first-of-type {
-    padding-left: 8px;
+    padding-left: 16px;
   }
   .ui-list th:last-of-type, .ui-list td:last-of-type {
-    padding-right: 8px;
+    padding-right: 16px;
   }
 }
 /* HEADER */
@@ -55,20 +55,15 @@ table.ui-list {
 .ui-list-content tr {
   height: 36px
 }
-.ui-row-echo:hover td label[onclick] {
+.ui-row-echo:hover .text-link {
   border-bottom: 1px solid currentColor;
 }
-.ui-row-echo td label[onclick]:hover {
+.ui-row-echo .text-link:hover {
   color: rgb(3,169,244);
 }
 
-.ui-list-content .ui-row-echo td > label {
-/*  position: relative;
-  top: 1px;*/
-  /*display: inline-block;*/
-  /*font-size: 13px;*/
-  /*vertical-align: unset;*/
-  /*padding: 0;*/
+.ui-row-echo label {
+  vertical-align: middle;
 }
 
 
@@ -135,3 +130,4 @@ table.ui-list {
   font-weight: 500;
   padding-top: 32px;
 }
+
