--- a/css/material_list_layout.css
+++ b/css/material_list_layout.css
@@ -1,6 +1,7 @@
 /* LAYOUT */
 .ui-container {
   max-width: 1280px;
+  /*min-width: 800px;*/
 }
 /* first and last col */
 .ui-list th:first-of-type, .ui-list td:first-of-type {
@@ -121,13 +122,17 @@ table.ui-list {
 /* empty state */
 .ui-no-item {
   width: 300px;
-  height: 110px;
+  height: 120px;
   text-align: center;
-}
-.no-item-alert {
   letter-spacing: 0.02em;
   font-size: 16px;
   font-weight: 500;
-  padding-top: 32px;
+  position: absolute;
+  top: 50%;
+  margin-top: -60px;
+  z-index: 10;
+  left: 50%;
+  margin-left: -150px;
 }
+
 
