--- a/css/material_edit.css
+++ b/css/material_edit.css
@@ -543,9 +543,9 @@ table .mini-icon-btn {
 
 /* Rules for using icons as black on a light background. */
 .material-icons.md-dark { color: rgba(0, 0, 0, 0.54); }
-.material-icons.md-dark.md-inactive { color: rgba(0, 0, 0, 0.26); }
+.material-icons.md-dark.md-inactive { color: rgba(0, 0, 0, 0.38); } /*dopyt, pôvodne na 26% */
 /* Rules for using icons as white on a dark background. */
 .material-icons.md-light { color: rgba(255, 255, 255, 1); }
-.material-icons.md-light.md-inactive { color: rgba(255, 255, 255, 0.3); }
+.material-icons.md-light.md-inactive { color: rgba(255, 255, 255, 0.5); }/*dopyt, pôvodne na 26% */
 
 .material-icons.orange600 { color: #FB8C00; }
